# COMP2113-GP

./: .gitignore  Makefile  README.md  main.cpp
home/: CMakeLists.txt  README.md
home/data/: highscores.txt
home/src/core/: constants.hpp  game.cpp  game.hpp  main.cpp  types.hpp
home/src/data/: highscore.cpp  highscore.hpp
home/src/entities/: bullet.cpp  bullet.hpp  enemy.cpp  enemy.hpp  player.cpp  player.hpp
home/src/ui/: hud.cpp  hud.hpp  menu.cpp  menu.hpp  shop.cpp  shop.hpp  shop_renderer.cpp  shop_renderer.hpp
home/src/weapons/: weapon.cpp  weapon.hpp
include/: game.h  input.h  physics.h  render.h
src/: game.cpp  input.cpp  physics.cpp  render.cpp
